[tool.poetry]
name = "gaia_sprint"
version = "0.1.0a0"
description = "UW Gaia Sprint 2024"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/albireox/gaia_sprint"
repository = "https://github.com/albireox/gaia_sprint"
keywords = ["astronomy", "software"]
packages = [
    { include = "gaia_sprint", from = "src" }
]
include = []
scripts = { "gaia_sprint" = "gaia_sprint.__main__:too_cli" }

[tool.poetry.dependencies]
python = "^3.12,<4.0"
sdsstools = "^1.6.1"
adbc-driver-postgresql = "^0.9.0"
polars = "^0.20.7"
rich = "^13.7.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.21.0"
ipdb = ">=0.12.3"
black = ">=24.1.1"
ruff = ">=0.1.0"
pandas-stubs = "^2.1.4.231227"
pytest = "^8.0.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"

[tool.black]
line-length = 88
target-version = ['py312']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = ["typings/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["gaia_sprint"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "target_selection", "sdssdb"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
